# In-Hand-Manipulation

./: .gitignore
dex_retargeting_baseline/: AGENTS.md  README.md  pyproject.toml
dex_retargeting_baseline/scripts/: list_envs.py  mediapipe_retarget_play.py  random_agent.py  zero_agent.py
dex_retargeting_baseline/scripts/skrl/: play.py  train.py
dex_retargeting_baseline/source/in_hand_baseline/: setup.py
dex_retargeting_baseline/source/in_hand_baseline/config/: extension.toml
dex_retargeting_baseline/source/in_hand_baseline/docs/: CHANGELOG.rst
dex_retargeting_baseline/source/in_hand_baseline/in_hand_baseline/retargeting/: __init__.py  inspire_dexpilot.py  joint_names.py  mediapipe_xr.py
dex_retargeting_baseline/source/in_hand_baseline/in_hand_baseline/retargeting/configs/: unitree_hand_right_dexpilot.yml
dex_retargeting_baseline/source/in_hand_baseline/in_hand_baseline/tasks/: __init__.py
dex_retargeting_baseline/source/in_hand_baseline/in_hand_baseline/tasks/hand_only_inspire/: __init__.py  hand_only_inspire_env_cfg.py
